--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ctparental (4.20.21-1.0) unstable; urgency=medium
+
+  * on supprime en virons 1313541 entrée .....blogspot.... dans la catégorie adult qui son remplacer par une liste beaucoup 
+  plus courte dans la catégorie ctparental ce qui allège les ressources nécessaire a dnsmasq 
+  et accélère le processus de migration de la blacklist.
+    
+ -- Guillaume marsat <CTparental1@laposte.net>  Wed, 09 Aug 2017 10:25:17 +0200
+ 
 ctparental (4.20.20-1.0) unstable; urgency=medium
 
   * correctif conflit avec systemd-resoled sous ubuntu 17.04.
