modifié :         CTparental 	modifié :         locale/fr_FR/LC_MESSAGES/ctparental.mo 	modifié :         locale/fr_FR/LC_MESSAGES/ctparental.po 	modifié :         www/CTadmin/bl_categories_help.php 	modifié :         www/CTadmin/bl_dns.php 	modifié :         www/CTadmin/dg_extensions.php 	modifié :         www/CTadmin/dg_mimetype.php 	modifié :         www/CTadmin/safesearch.php 	modifié :         www/CTparental/index.php

--- a/locale/fr_FR/LC_MESSAGES/ctparental.po
+++ b/locale/fr_FR/LC_MESSAGES/ctparental.po
@@ -343,6 +343,12 @@ msgstr "\t=> Désactiver les règles privoxy par défaut."
 msgid "\t=> Enable default rules privoxy. (default is Enable)"
 msgstr "\t=> Activer les règles par défaut de privoxy."
 
+msgid "\t=> Enable redirect page."
+msgstr "\t=> Activer la page de redirection."
+
+msgid "\t=> Disabled redirect page."
+msgstr "\t=> Désactiver la page de redirection."
+
 # ## CTadmin ###
 msgid "the selected user is: "
 msgstr "l'utilisateur sélectionné est : "
@@ -757,12 +763,6 @@ msgstr "Le filtrage par défaut de Privoxy est activé."
 
 msgid "Default filter Pivoxy is disabled"
 msgstr "Le filtrage par défaut de Privoxy est désactivé."
-
-msgid "Enable redirect page."
-msgstr "Activer la page de redirection."
-
-msgid "Disabled redirect page."
-msgstr "Désactiver la page de redirection."
 
 msgid "Site related to as pop up advertising or pornography not present in the Toulouse blacklist."
 msgstr "Site référencé comme pop up de publicité ou de pornographie non présent dans la blacklist de Toulouse."
