modifié :         locale/ctparental.pot

--- a/locale/ctparental.pot
+++ b/locale/ctparental.pot
@@ -159,10 +159,6 @@ msgid ""
 "\t   example: CTparental -dirhtml -i /home/toto/html/\n"
 "\t   if no option a default page is used."
 msgstr ""
-"\t=> Installe le contrôle parental sur l'ordinateur (PC de bureau). Peut être utilisé avec\n"
-"\t   un paramètre supplémentaire pour indiquer un chemin de sources pour la page web de redirection.\n"
-"\t   exemple : CTparental -i -dirhtml /home/toto/html/\n"
-"\t   si pas d'option la page par défaut est utilisée."
 
 msgid "\t=> uninstall the Parental Control Computer (desktop PC)"
 msgstr ""
@@ -186,8 +182,6 @@ msgid ""
 "\t=> Set the filter mode by whitelist or blacklist (default)\n"
 "\t   and the categories that you want to activate."
 msgstr ""
-"\t=> Configure le mode de filtrage par liste blanche ou par liste noire (défaut)\n"
-"\t   ainsi que les catégories que vous voulez activer."
 
 msgid "\t=> Reset the default active categories and blacklist filtering."
 msgstr ""
@@ -205,11 +199,6 @@ msgid ""
 "\t           - Default: CTparental -uhtml\n"
 "\t   also lets you change the login couple password of the web interface."
 msgstr ""
-"\t=> met à jour la page de redirection à partir d'un répertoire source ou par défaut.\n"
-"\t   exemples:\n"
-"\t           - avec un répertoire source : CTparental -uhtml -dirhtml /home/toto/html/\n"
-"\t           - par défaut : CTparental -uhtml\n"
-"\t   permet aussi de changer le couple identifiant-mot de passe de l'interface web."
 
 msgid "\t=> Enable the automatic update of the Toulouse blacklist (every 7 days)."
 msgstr ""
@@ -228,12 +217,6 @@ msgid ""
 "\t   CTparental -dirhtml -i /home/toto/html/ -nodep\n"
 "\t   CTparental -u -nodep"
 msgstr ""
-"\t=> si placé aprés -i ou -u permet de ne pas installer/désinstaller les dépendances, utiles si\n"
-"\t   on préfère les installer à la main, ou pour le script de postinst et prerm du deb.\n"
-"\t   exemples:\n"
-"\t           CTparental -i -nodep\n"
-"\t           CTparental -i -dirhtml /home/toto/html/ -nodep\n"
-"\t           CTparental -u -nodep"
 
 msgid "\t=> used only for the postinst and prerm script."
 msgstr ""
@@ -245,11 +228,6 @@ msgid ""
 "\t           Comment all users that you want to filter in $FILE_GCTOFFCONF\n"
 "\t           CTparental -gctalist"
 msgstr ""
-"\t=> Active un groupe d'utilsiateurs privilégiés ne subissant pas le filtrage.\n"
-"\t   exemples:\n"
-"\t           CTparental -gctulist\n"
-"\t           Commenter tous les utilisateurs que vous voulez filtrer dans $FILE_GCTOFFCONF\n"
-"\t           CTparental -gctalist"
 
 msgid "\t=> Disable privileged group."
 msgstr ""
@@ -274,9 +252,6 @@ msgid ""
 "$FILEIPTABLES \n"
 "then run the command CTparental -ipton"
 msgstr ""
-"pour ajouter des règles personnalisées éditez le fichier \n"
-"$FILEIPTABLES \n"
-"puis relancez la commande CTparental -ipton"
 
 msgid "Unknown argument"
 msgstr ""
@@ -312,8 +287,6 @@ msgid ""
 "$PCUSER is allowed to connect X minutes per day \n"
 "X (1 a 1440) = "
 msgstr ""
-"$PCUSER est autorisé à se connecter X minutes par jour \n"
-"X (1 a 1440) = "
 
 msgid "X must take a value between 1 and 1440 \n"
 msgstr ""
@@ -322,8 +295,6 @@ msgid ""
 "$PCUSER is allowed to surf the Internet X minutes per day \n"
 "X ( 1 a $timesession )= "
 msgstr ""
-"$PCUSER est autorisé à surfer X minutes par jour \n"
-"X ( 1 a $timesession )= "
 
 msgid "X must take a value between 1 and $timesession \n"
 msgstr ""
@@ -341,6 +312,12 @@ msgid "\t=> Disable default rules privoxy."
 msgstr ""
 
 msgid "\t=> Enable default rules privoxy. (default is Enable)"
+msgstr ""
+
+msgid "\t=> Enable redirect page."
+msgstr ""
+
+msgid "\t=> Disabled redirect page."
 msgstr ""
 
 # ## CTadmin ###
@@ -756,12 +733,6 @@ msgid "Default filter Pivoxy is activated"
 msgstr ""
 
 msgid "Default filter Pivoxy is disabled"
-msgstr ""
-
-msgid "Enable redirect page."
-msgstr ""
-
-msgid "Disabled redirect page."
 msgstr ""
 
 msgid "Site related to as pop up advertising or pornography not present in the Toulouse blacklist."
