modifié :         locale/ctparental.pot 	modifié :         locale/fr_FR/LC_MESSAGES/ctparental.mo 	modifié :         locale/fr_FR/LC_MESSAGES/ctparental.po 	modifié :         www/CTadmin/body.php

--- a/locale/ctparental.pot
+++ b/locale/ctparental.pot
@@ -726,6 +726,9 @@ msgstr ""
 msgid "e2guardian configuration"
 msgstr ""
 
+msgid "Safesearch configuration"
+msgstr ""
+
 msgid "Select the safesearch to be enabled"
 msgstr ""
 
