--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ctparental (4.20.24-1.0) unstable; urgency=medium
+
+  * mayeur gesion des utilisateurs ur les poste intégrer a un domain.
+  limitation a une seul execution du scripte a la foie.
+    
+ -- Guillaume marsat <CTparental1@laposte.net>  Thu, 24 Aug 2017 21:36:20 +0200
+ 
 ctparental (4.20.23-1.0) unstable; urgency=medium
 
   * Correction du non filtrage de la session invité.
