modifié :         CTparental 	modifié :         locale/fr_FR/LC_MESSAGES/ctparental.po

--- a/locale/fr_FR/LC_MESSAGES/ctparental.po
+++ b/locale/fr_FR/LC_MESSAGES/ctparental.po
@@ -241,7 +241,7 @@ msgstr "\t=> utilisé uniquement pour les scripts de postinst et prerm."
 msgid ""
 "\t=> Enable a group of privileged user that will not undergo filtering.\n"
 "\t   exemples:\n"
-"\t           CTparental.sh -gctulist\n"
+"\t           CTparental -gctulist\n"
 "\t           Comment all users that you want to filter in $FILE_GCTOFFCONF\n"
 "\t           CTparental -gctalist"
 msgstr ""
@@ -268,6 +268,16 @@ msgstr "\t=> Active les règles de pare-feu personnalisées."
 
 msgid "\t=> Disable rules of custom firewall."
 msgstr "\t=> Désactive les règles de pare-feu personnalisées."
+
+msgid ""
+"\t=> Export configuration.\n"
+"\t   exemple:\n"
+"\t           CTparental -exp /home/myhomedir/\n"
+
+msgstr ""
+"\t=> Import a configuration.\n"
+"\t   exemple:\n"
+"\t           CTparental -imp /home/myhomedir/CTparental.conf.yy.mm.dd.tar.gz\n"
 
 msgid ""
 "to add custom rules edit the file \n"
