modifié :         locale/fr_FR/LC_MESSAGES/ctparental.mo 	modifié :         locale/fr_FR/LC_MESSAGES/ctparental.po

--- a/locale/fr_FR/LC_MESSAGES/ctparental.po
+++ b/locale/fr_FR/LC_MESSAGES/ctparental.po
@@ -272,12 +272,20 @@ msgstr "\t=> Désactive les règles de pare-feu personnalisées."
 msgid ""
 "\t=> Export configuration.\n"
 "\t   exemple:\n"
-"\t           CTparental -exp /home/myhomedir/\n"
-
+"\t           CTparental -exp /home/myhomedir/"
 msgstr ""
+"\t=> Exporter la configuration.\n"
+"\t   exemple:\n"
+"\t           CTparental -exp /home/myhomedir/"
+
+msgid ""
 "\t=> Import a configuration.\n"
 "\t   exemple:\n"
-"\t           CTparental -imp /home/myhomedir/CTparental.conf.yy.mm.dd.tar.gz\n"
+"\t           CTparental -imp /home/myhomedir/CTparental.conf.yy.mm.dd.tar.gz"
+msgstr ""
+"\t=> Importer une configuration.\n"
+"\t   exemple:\n"
+"\t           CTparental -imp /home/myhomedir/CTparental.conf.yy.mm.dd.tar.gz"
 
 msgid ""
 "to add custom rules edit the file \n"
