--- a/debian/changelog
+++ b/debian/changelog
@@ -2,9 +2,10 @@ ctparental (4.20.26-1.0) unstable; urgency=medium
 
   * remplacement de l'utilisation de netstat devenus obsolaite par ss
   * http://127.0.0.1/CTadmin devient http://127.0.0.11/CTadmin pour
-  permètre une installation d'apache2 en parallel.
+  permètre une installation d'apache2 si celui si n'écoute pas sur les ip 127.0.0.10,127.0.0.11,
+  [fc00::127:11],[fc00::127:10] déja utilisé par CTparental (lighttpd).
     
- -- Guillaume marsat <CTparental1@laposte.net>  Sat, 25 Nov 2017 11:54:15 +0100
+ -- Guillaume marsat <CTparental1@laposte.net>  Wed, 06 Dec 2017 00:38:54 +0100
  
 ctparental (4.20.25-1.0) unstable; urgency=medium
 
