--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ctparental (4.20.27-1.0) unstable; urgency=medium
+
+  * ajout du Safesearch  pour qwant.com qui redirige automatiquement vers qwantjunior.com
+  * ajour du suport de l'espagnol durant l'installation et sur les pages d'interception
+  e2guardian/dansguardian.
+    
+ -- Guillaume marsat <CTparental1@laposte.net>  Sat, 23 Dec 2017 08:47:48 +0100
+ 
 ctparental (4.20.26-1.0) unstable; urgency=medium
 
   * remplacement de l'utilisation de netstat devenus obsolaite par ss
