--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ctparental (4.20.27-2.0) unstable; urgency=medium
+
+  * correction bug bing en https injoignable.
+    
+ -- Guillaume marsat <CTparental1@laposte.net>  Sun, 24 Dec 2017 15:06:49 +0100
+ 
 ctparental (4.20.27-1.0) unstable; urgency=medium
 
   * ajout du Safesearch  pour qwant.com qui redirige automatiquement vers qwantjunior.com
