--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ctparental (4.20.28-1.0) unstable; urgency=medium
+
+  * correction bug d'accès a l'interface d'administration quant on utilise chrome.
+  l'interface d'administration change a nouveau et devient https://admin.ct.local
+    
+ -- Guillaume marsat <CTparental1@laposte.net>  Tue, 26 Dec 2017 12:54:49 +0100
+
 ctparental (4.20.27-2.0) unstable; urgency=medium
 
   * correction bug bing en https injoignable.
