modifié :         debian/changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 ctparental (4.20.29-1.0) unstable; urgency=medium
 
   * correction d'un bug dans le gestion du temps de connexion qui n'était pas prit en compte. 
+  * crontab moins verbeuse.
     
  -- Guillaume marsat <CTparental1@laposte.net>  Sat, 20 Jan 2018 09:33:22 +0100
  
