modifié :         locale/ctparental.pot 	modifié :         locale/es_ES/LC_MESSAGES/ctparental.mo 	modifié :         locale/es_ES/LC_MESSAGES/ctparental.po 	modifié :         locale/fr_FR/LC_MESSAGES/ctparental.mo 	modifié :         locale/fr_FR/LC_MESSAGES/ctparental.po

--- a/locale/ctparental.pot
+++ b/locale/ctparental.pot
@@ -760,3 +760,6 @@ msgstr ""
 
 msgid "Site related to as pop up advertising or pornography not present in the Toulouse blacklist."
 msgstr ""
+
+msgid "minutes are already used"
+msgstr ""
