--- a/locale/es_ES/LC_MESSAGES/ctparental.po
+++ b/locale/es_ES/LC_MESSAGES/ctparental.po
@@ -7,7 +7,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.4\n"
+"X-Generator: Poedit 1.8.11\n"
 "Last-Translator: \n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "Language: es\n"
@@ -787,3 +787,6 @@ msgstr "El filtrado predeterminado de Privoxy está desactivado."
 
 msgid "Site related to as pop up advertising or pornography not present in the Toulouse blacklist."
 msgstr "Sitio que aparece como publicidad emergente o de pornografía no presente en la lista negra de Toulouse."
+
+msgid "minutes are already used"
+msgstr "minutos ya utilizados"
