--- a/locale/fr_FR/LC_MESSAGES/ctparental.po
+++ b/locale/fr_FR/LC_MESSAGES/ctparental.po
@@ -7,7 +7,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.2\n"
+"X-Generator: Poedit 1.8.11\n"
 "Last-Translator: \n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "Language: fr\n"
@@ -797,3 +797,6 @@ msgstr "Le filtrage par défaut de Privoxy est désactivé."
 
 msgid "Site related to as pop up advertising or pornography not present in the Toulouse blacklist."
 msgstr "Site référencé comme pop up de publicité ou de pornographie non présent dans la blacklist de Toulouse."
+
+msgid "minutes are already used"
+msgstr "minutes déjà utilisées"
