modifié :         locale/ctparental.pot 	modifié :         locale/es_ES/LC_MESSAGES/ctparental.mo 	modifié :         locale/es_ES/LC_MESSAGES/ctparental.po 	modifié :         locale/fr_FR/LC_MESSAGES/ctparental.mo 	modifié :         locale/fr_FR/LC_MESSAGES/ctparental.po

--- a/locale/ctparental.pot
+++ b/locale/ctparental.pot
@@ -743,7 +743,7 @@ msgstr ""
 msgid "Select the mimetype to be filtered"
 msgstr ""
 
-msgid "e2guardian configuration"
+msgid "Dansguardian configuration"
 msgstr ""
 
 msgid "Safesearch configuration"
